dataset1235/2025-2/2868285114/users/3212226731/executions/3649835072_3921830315.log
== SUBMISSION (2025-08-15 03:16:52)
-- CODE: 
litros = float(input())
servico = litros*2.86 + 50.00
total = servico + (34/100)*servico
print (round(total,2))
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-15 03:16:18)
-- CODE: 
litros = float(input())
servico = litros*2.86 + 50.00
total = servico + (34/100)servico
print (round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 3
    total = servico + (34/100)servico
                              ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 3
    total = servico + (34/100)servico
                              ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 3
    total = servico + (34/100)servico
                              ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 3
    total = servico + (34/100)servico
                              ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 3
    total = servico + (34/100)servico
                              ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 3
    total = servico + (34/100)servico
                              ^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
